fix nav button scaling alignment

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -68,7 +68,7 @@ a {
     } /* ul */
 
     .nav-button {
-      padding: 0.25vw 1.15vw;
+      padding: 0.26vw 1.15vw;
       margin: 0;
     }
   } /* .menu */
